--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-rename": "^1.2.2",
-    "gulp-uglifyjs": "^0.6.2",
+    "gulp-uglify": "^3.0.2",
     "vue": "^2.6.8"
   },
   "dependencies": {
